# web-data-extraction

./: .env  .gitignore  README.md  docker-compose.yaml  start.sh
docker/: scraper.Dockerfile
src/: pyproject.toml  run_backend.py
src/backend/: main.py
src/backend/api/: api_v1.py
src/backend/api/endpoints/: web_extraction.py
src/scrapy_project/: scrapy.cfg
src/scrapy_project/web_extraction/: items.py  middlewares.py  pipelines.py  settings.py
src/scrapy_project/web_extraction/parsers/: WebPageParser.py  html_parsers.py  image_parsers.py  pdf_parsers.py
src/scrapy_project/web_extraction/spiders/: generic_spider.py  trustpilot_spider.py
