[tool.poetry]
name = "web-extraction"
version = "0.1.0"
description = "Crawling and scraping a generic website URL"
authors = ["Sara Piscitelli <104431794+sarapiscitelli@users.noreply.github.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
packages = [
    { include = "scrapy_project", from = "." },
    { include = "backend", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
trafilatura = "^1.6.3"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.4.0"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
